# cp_utils

./: Makefile.am  README.md  cmalloc-1.0.pc  cmalloc-1.0.pc.in  configure.ac  cp_utils-1.0.pc.in
include/libcmalloc-1.0/: cmalloc.h
include/libcp_utils-1.0/: queue.h  stack.h
src/: Makefile.am  cmalloc.c  lro2_os.h  queue.c  stack.c
test/: Makefile.am  cmalloc_test.c  queue_test.c  stack_test.c
